samples/_failures_safe/1761668233_fc2453_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e36c782.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_3e36c782.c:165:24: error: missing terminating " character
  165 |                 printf("
      |                        ^
./samples/SAFE/__tmp_3e36c782.c:165:17: error: expected expression at end of input
  165 |                 printf("
      |                 ^~~~~~
./samples/SAFE/__tmp_3e36c782.c:165:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3e36c782.c:165:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3e36c782.c:165:17: error: expected declaration or statement at end of input
